[package]
name = "phrack-read"
version = "0.1.2"
edition = "2021"
authors = ["PATEL96 <contact@patel96.live>"]
description = "A CLI tool to scrape and display Phrack articles"
repository = "https://github.com/patel96/phrack-read"
license = "MIT"
build = "build.rs"

[dependencies]
reqwest = { version = "0.12.14", features = ["json"] }
scraper = "0.23.1"
colored = "3.0.0"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28.1"
unicode-width = "0.2.0"
clap = { version = "4.0", features = ["derive"] }
